--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Homepage</title>
+    <title>Contact Page</title>
 </head>
 
 <body>
-    <h1>🥐Croissant</h1>
+    <h1>Contact Info</h1>
     <br />
-    <p>A croissant is a buttery, flaky, viennoiserie pastry inspired by the shape of the Austrian kipferl but using the
-        French yeast-leavened laminated dough.</p>
+    <p>Email us at <a href="hello@croissant.com">hello@croisant.com</a> for more info! Thank you!
+    </p>
     <div class="links"><a href="/index.html">Homepage</a>
         <a href="/photo.html">Photo</a>
         <a href="/contact.html">Contact</a>
