--- a/photo.html
+++ b/photo.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
-    <h1>About me Page</h1>
-    <a href="/">Back to Home page</a>
+    <h1>Photo</h1>
+    <img src="/images/croissant.jpg" alt="">
+    <div class="links"><a href="/index.html">Homepage</a>
+        <a href="/photo.html">Photo</a>
+        <a href="/contact.html">Contact</a>
+    </div>
 </body>
 
 </html>
