Made more SEO friendly

--- a/contact.html
+++ b/contact.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Contact info for Croissants">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Contact Page</title>
+    <title>Contact Us About Croissants</title>
 </head>
 
 <body>
-    <h1>Contact Info</h1>
+    <h1>Contact Info for Croissants</h1>
     <br />
     <p>Email us at <a href="hello@croissant.com">hello@croisant.com</a> for more info! Thank you!
     </p>
-    <div class="links"><a href="/index.html">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+    <div class="links"><a href="/index.html" title="back to homepage">Homepage</a>
+        <a href="/photo.html" title="photo of croissants">Photo</a>
+        <a href="/contact.html" title="contact for more info on croissants">Contact</a>
     </div>
 </body>
 
