--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="About Croissants">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Homepage</title>
@@ -15,8 +16,8 @@
     <p>A croissant is a buttery, flaky, viennoiserie pastry inspired by the shape of the Austrian kipferl but using the
         French yeast-leavened laminated dough.</p>
     <div class="links"><a href="/index.html">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/photo.html" title="croissant">Photo</a>
+        <a href="/contact.html" title="contact for mroe info on croissants">Contact</a>
     </div>
 </body>
 
