--- a/photo.html
+++ b/photo.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Photo of a Croissant">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>About me</title>
+    <title>Photo of Croissant</title>
 </head>
 
 <body>
     <h1>Photo</h1>
-    <img src="/images/croissant.jpg" alt="">
-    <div class="links"><a href="/index.html">Homepage</a>
+    <img src="/images/croissant.jpg" alt="Photo of a croissant">
+    <div class="links"><a href="/index.html" title="back to homepage">Homepage</a>
         <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/contact.html" title="contact for more info on Croissants">Contact</a>
     </div>
 </body>
 
